# rust_simd_inline_regression

./: Cargo.toml  inlined.s  inlined_w_code.s  normal.s  normal_w_code.s
benches/: bench.rs
src/: lib.rs  main.rs
str_indices/: Cargo.toml
str_indices/src/: byte_chunk.rs
