[package]
name = "inline_issue_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
str_indices = { git = "https://github.com/CeleritasCelery/str_indices", branch = "repo-issue" }


[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "bench"
harness = false
